# emt-tracking

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data-engineering/ml-models/: pyproject.toml
data-engineering/pipelines/: pyproject.toml
docs/adr/: ADR-001-stack-decisiones.md
docs/architecture/: architecture.drawio
services/emt-gateway/: main.py  pyproject.toml
services/emt-gateway/src/emt_gateway/: config.py  main.py
services/emt-gateway/src/emt_gateway/api/v1/routes/: buses.py
services/emt-gateway/src/emt_gateway/application/: poller.py
services/emt-gateway/src/emt_gateway/application/use_cases/: get_arrivals.py
services/emt-gateway/src/emt_gateway/domain/models/: bus.py
services/emt-gateway/src/emt_gateway/domain/ports/: emt_port.py
services/emt-gateway/src/emt_gateway/infrastructure/emt_client/: emt_client.py
services/emt-gateway/src/emt_gateway/infrastructure/kafka/: dependencies.py  kafka_producer.py
services/emt-prediction/: main.py  pyproject.toml
